// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render StyledLink component with custom colors. 1`] = `
<span
  className="StyledLink-khUpca esxowh"
/>
`;

exports[`Render StyledLink component with default colors. 1`] = `
<span
  className="StyledLink-khUpca HidjM"
/>
`;
